# cats-anomaly-detection

./: .dvcignore  .gitignore  .pre-commit-config.yaml  README.md  dvc.yaml  pyproject.toml
.dvc/: config
cats_anomaly_detection/: commands.py
cats_anomaly_detection/data/: __init__.py  datamodule.py  download.py  preprocessing.py
cats_anomaly_detection/models/: __init__.py  tcn_transformer_autoencoder.py
cats_anomaly_detection/training/: __init__.py  callbacks.py  inference.py  lightning_module.py  runner.py
cats_anomaly_detection/utils/: __init__.py  git_utils.py  plots.py  reproducibility.py
configs/: config.yaml
configs/data/: cats.yaml
configs/logging/: mlflow.yaml
configs/model/: autoencoder.yaml
configs/training/: trainer.yaml
data/raw/: cats_features.parquet.dvc
tests/: test_preprocessing.py
