[project]
name = "cats-anomaly-detection"
version = "0.1.0"
description = "Multivariate anomaly detection for CATS dataset using PyTorch Lightning"
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "Ilker Emre Koc", email = "ilkeremrekoc@gmail.com" }]
dependencies = [
	"torch>=2.4.0,<3.0.0",
	"pytorch-lightning>=2.4.0,<3.0.0",
	"hydra-core>=1.3.2,<2.0.0",
	"omegaconf>=2.3.0,<3.0.0",
	"pandas>=2.2.2,<3.0.0",
	"pyarrow>=17.0.0,<18.0.0",
	"numpy>=2.1.1,<3.0.0",
	"scikit-learn>=1.5.1,<2.0.0",
	"matplotlib>=3.9.2,<4.0.0",
	"mlflow>=2.16.0,<3.0.0",
	"dvc>=3.55.2,<4.0.0",
	"fire>=0.7.1,<1.0.0",
	"requests>=2.32.3,<3.0.0",
	"dvc-gdrive>=3.0.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
cats-train = "cats_anomaly_detection.commands:main"

[dependency-groups]
dev = [
	"pre-commit>=3.8.0,<4.0.0",
	"ruff>=0.6.4,<1.0.0",
	"pytest>=8.3.2,<9.0.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["cats_anomaly_detection*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
